[gd_scene load_steps=10 format=3 uid="uid://bcdqm3lsb2brs"]

[ext_resource type="Script" path="res://src/level/root.gd" id="1_7rjcc"]
[ext_resource type="Script" path="res://src/model/manager_level.gd" id="2_xdbrb"]
[ext_resource type="Script" path="res://src/util/debug_keys.gd" id="3_3tsrq"]
[ext_resource type="Script" path="res://src/model/manager_events.gd" id="3_epid0"]
[ext_resource type="Script" path="res://src/model/manager_request.gd" id="4_codbd"]
[ext_resource type="Script" path="res://src/model/manager_ui.gd" id="4_hmnwa"]
[ext_resource type="Script" path="res://src/model/ManagerSound.gd" id="5_7fgav"]
[ext_resource type="Script" path="res://src/level/sound_get_one_shot.gd" id="6_jyv1p"]
[ext_resource type="Script" path="res://src/model/manager_money.gd" id="8_kdgwi"]

[node name="Root" type="Node"]
script = ExtResource("1_7rjcc")

[node name="DebugKeys" type="Node" parent="."]
script = ExtResource("3_3tsrq")

[node name="ManagerEvents" type="Node" parent="."]
script = ExtResource("3_epid0")

[node name="ManagerRequest" type="Node" parent="."]
script = ExtResource("4_codbd")

[node name="TimerRequest" type="Timer" parent="ManagerRequest"]
wait_time = 15.0

[node name="TimerPublicReview" type="Timer" parent="ManagerRequest"]

[node name="ManagerSound" type="Node" parent="."]
script = ExtResource("5_7fgav")

[node name="AudioStreamPlayer_loop" type="AudioStreamPlayer" parent="ManagerSound"]

[node name="one_shot" type="Node" parent="ManagerSound"]
script = ExtResource("6_jyv1p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ManagerSound/one_shot"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ManagerSound/one_shot"]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ManagerSound/one_shot"]

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="ManagerSound/one_shot"]

[node name="ManagerLevel" type="Node" parent="."]
script = ExtResource("2_xdbrb")

[node name="TimerLevel" type="Timer" parent="ManagerLevel"]
wait_time = 60.0

[node name="LevelRoot" type="Node3D" parent="ManagerLevel"]

[node name="ManagerMoney" type="Node" parent="."]
script = ExtResource("8_kdgwi")

[node name="TimerEarn" type="Timer" parent="ManagerMoney"]
wait_time = 2.0

[node name="ManagerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_hmnwa")
